--- a/style.css
+++ b/style.css
@@ -1,27 +1,29 @@
 .container {
 background:  burlywood;
 border: 1px black solid ;
-/* box-sizing: border-box; */
 width: 500px;
 height: 500px;
 margin: 0 auto;
-/* padding-left: 50px;
-padding-bottom: 50px; */
 display: flex;
 flex-wrap: wrap;
 }
 
 .cell {
-  /* // cell.style.margin = "0px";
-  // cell.style.padding = "0px"; */
   width: 50px;
   height: 50px;
-  font-size: 40px;
+  font-size: 30px;
   font-weight: bold;
   color: red;
   text-align: center;
-  /* border: 1px black solid; */
   box-sizing: border-box;
+}
+
+.white_text {
+  color: #ffffff;
+}
+
+.black_text {
+  color: #000000;
 }
 
 .black {
